# logtest

./: .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  main.cpp
src/logging/: CMakeLists.txt  log.cpp  log.h
